<?xml version="1.0" encoding="UTF-8"?>
<!-- RECOMMENDED DEPENDENCY UPDATES FOR IMPROVED SECURITY AND PERFORMANCE -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>kfonetalentsuite</groupId>
	<artifactId>kfonetalentsuite</artifactId>
	<version>2.1.0-SNAPSHOT</version>

	<properties>
		<maven.compiler.source>22</maven.compiler.source>
		<maven.compiler.target>22</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<cucumber.version>7.18.1</cucumber.version>
		<selenium.version>4.25.0</selenium.version>
		<log4j.version>2.25.1</log4j.version>
		<poi.version>5.3.0</poi.version>
		<allure.version>2.27.0</allure.version>
		
		<!-- Default test suite - can be overridden via -DsuiteXmlFile=<suite>.xml -->
		<suiteXmlFile>JAM_SanityTestSuite.xml</suiteXmlFile>
		
		<!-- Allure reporting control: Set to true to skip, false to enable -->
		<!-- Can be overridden via: mvn test -DskipAllure=true -->
		<skipAllure>false</skipAllure>
		
		<!-- Cross-browser testing now handled by individual runners like AutoRun_CrossBrowser_LoginPageRunner01 -->
	</properties>

	<dependencies>
		<!-- UPDATED: Cucumber Dependencies - Consistent Versions -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>${cucumber.version}</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
		</dependency>

		<!-- UPDATED: Latest Selenium with Security Fixes -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		
		<!-- UPDATED: Latest WebDriverManager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.6.4</version>
		</dependency>
		
		<!-- UPDATED: Log4j (Security Critical) -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<!-- UPDATED: Apache POI - Latest Version with Security Fixes -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi.version}</version>
		</dependency>

		<!-- REMOVED: Old Cucumber Dependencies (4.2.0 versions) -->
		<!-- These were causing version conflicts -->

		<!-- UPDATED: Latest OpenCSV -->
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.9</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
		</dependency>

		<!-- UPDATED: Commons BeanUtils (Latest Available Version) -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.10.0</version>
		</dependency>

		<!-- OPTIONAL: ZAP Client (if security testing needed) -->
		<dependency>
			<groupId>org.zaproxy</groupId>
			<artifactId>zap-clientapi</artifactId>
			<version>1.13.0</version>
		</dependency>

		<!-- ADDED: Allure Reporting Dependencies -->
		<!-- Allure TestNG Adapter for TestNG integration -->
		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-testng</artifactId>
			<version>${allure.version}</version>
		</dependency>

		<!-- Allure Cucumber JVM Adapter for Cucumber 7.x integration -->
		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-cucumber7-jvm</artifactId>
			<version>${allure.version}</version>
		</dependency>
	</dependencies>

	<!-- ADDED: Dependency Management for Version Conflict Resolution -->
	<dependencyManagement>
		<dependencies>
			<!-- Force compatible version of cucumber-messages to resolve Allure-Cucumber conflict -->
			<dependency>
				<groupId>io.cucumber</groupId>
				<artifactId>messages</artifactId>
				<version>24.1.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- ADDED: Maven Plugins for Better Build Management -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>22</source>
					<target>22</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>-Xlint:none</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			
			<!-- ENHANCED: Surefire Plugin for TestNG with Cross-Browser Support -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<!-- Conditional suite XML configuration:
					     - If running test suite: mvn test -DsuiteXmlFile=JAM_SanityTestSuite.xml
					     - If running individual runner: mvn test -Dtest=testrunners.JobMapping.Runner12b
					     When -Dtest is specified, Surefire ignores suiteXmlFiles automatically -->
					<properties>
						<property>
							<name>suitename</name>
							<value>E2E Test Suite</value>
						</property>
					</properties>
					<!-- PARALLEL EXECUTION CONFIGURATION:
					     Parallel execution settings are controlled by TestNG suite XML files, NOT by Surefire plugin.
					     This allows each test suite to define its own parallel strategy and thread count:
					     - JAM_SanityTestSuite.xml: parallel="tests" thread-count="3"
					     - JAM_SmokeTestSuite.xml: parallel="tests" thread-count="4"
					     - JAM_RegressionTestSuite.xml: parallel="tests" thread-count="5"
					     
					     DO NOT set <parallel> or <threadCount> here as it will override TestNG suite XML settings.
					     If you need to override from command line, use: -DparallelMode=tests -DthreadCount=N
					-->
					<!-- Configure TestNG output directory -->
					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
					<!-- Allow test failures without failing the build (for CI/CD reporting) -->
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>

			<!-- ADDED: Dependency Check Plugin for Security Scanning -->
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>10.0.4</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		<!-- ADDED: Allure Maven Plugin for Report Generation -->
		<!-- To generate Allure report manually: mvn allure:report -->
		<!-- To skip automatic generation: remove the execution phase binding below -->
		<plugin>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-maven</artifactId>
			<version>2.13.0</version>
			<configuration>
				<reportVersion>${allure.version}</reportVersion>
				<!-- Use dedicated AllureReports folder (similar to ExcelReports) -->
				<!-- Results stored at project root (not in target/) -->
				<resultsDirectory>${project.basedir}/AllureReports/allure-results</resultsDirectory>
				<!-- Report generated at project root (not in target/) -->
				<reportDirectory>${project.basedir}/AllureReports/allure-report</reportDirectory>
			</configuration>
		</plugin>
		</plugins>
	</build>
	
	<!-- PROFILES: Different execution modes -->
	<profiles>
		<!-- Profile for running test suites (XML files) -->
		<profile>
			<id>test-suite</id>
			<activation>
				<property>
					<name>suiteXmlFile</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.2.5</version>
						<configuration>
							<suiteXmlFiles>
								<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
							</suiteXmlFiles>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<!-- Profile for running individual test runners -->
		<profile>
			<id>individual-runner</id>
			<activation>
				<property>
					<name>test</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.2.5</version>
						<configuration>
							<!-- No suite XML files when running individual tests -->
							<suiteXmlFiles combine.self="override"/>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
